@@ -1,6 +1,6 @@
 Package: fingerprint
-Version: 3.4.5
-Date: 2011-07-26
+Version: 3.4.6
+Date: 2012-02-21
 Title: Functions to operate on binary fingerprint data
 Author: Rajarshi Guha <rajarshi.guha@gmail.com>
 Maintainer: Rajarshi Guha <rajarshi.guha@gmail.com>
